--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
   <div class="popup_img">
     <picture><img src="https://picsum.photos/seed/picsum17/400/500" alt=""></picture>
   </div>
+  <div class="popup_img">
+    <picture><img src="https://picsum.photos/seed/picsum20/400/500" alt=""></picture>
+  </div>
+  <div class="popup_img">
+    <picture><img src="https://picsum.photos/seed/picsum25/400/500" alt=""></picture>
+  </div>
 
   <div class="popup_modal">
     <p class="close">x</p>
-    <picture><img class="popup_modal_img" src="https://picsum.photos/seed/picsum17/400/500" alt=""></picture>
+    <picture><img class="popup_modal_img" src= ></picture>
   </div>
   <script src="script.js"></script>
 </body>
